--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 
 services:
   app:
-    image: maacosv/teste-deploy:1.1 
+    image: maacosv/teste-deploy:latest
     ports:
       - "8080:8080" 
     depends_on:
@@ -22,6 +22,7 @@ services:
       - "3306:3306"
     volumes:
       - ./mysql_data:/var/lib/mysql
+      - ./sql-scripts:/docker-entrypoint-initdb.d
 
 volumes:
   mysql_data:
